@@ -4,7 +4,7 @@
       "Jos Boumans <kane[at]cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621",
+   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120530",
    "license" : [
       "perl_5"
    ],
@@ -22,12 +22,12 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "configure" : {
          "requires" : {
-            "ExtUtils::MakeMaker" : 0
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "runtime" : {
@@ -38,9 +38,9 @@
             "IO::Compress::Bzip2" : "2.015",
             "IO::Compress::Gzip" : "2.015",
             "IO::Zlib" : "1.01",
-            "Package::Constants" : 0,
+            "Package::Constants" : "0",
             "Test::Harness" : "2.26",
-            "Test::More" : 0,
+            "Test::More" : "0",
             "perl" : "5.00503"
          }
       }
@@ -51,5 +51,5 @@
          "url" : "https://github.com/jib/archive-tar-new"
       }
    },
-   "version" : "1.82"
+   "version" : "1.84"
 }
